fixed crazy overflow bug caused by one little character

--- a/javascript/exercises3-jquery/blackjack/style.css
+++ b/javascript/exercises3-jquery/blackjack/style.css
@@ -17,7 +17,7 @@ body {
 h1 {
   color: white;
   margin-left: 2em;
-  margin-top: 3em;
+  margin-top: 2em;
   letter-spacing: .2em;
   font-size: 2.5em;
   text-decoration: underline;
@@ -31,10 +31,11 @@ h1 {
 
 .littler {
   font-size: .6em;
+  text-decoration: none !important;
 }
 
 #table {
-  margin: 8em 4em 2em 4em;
+  margin: 4em 4em 2em 4em;
   background: #e1b876; /* Old Browsers */
   background: -webkit-radial-gradient(top right,#e1b876,#eeeeee); /*Safari 5.1-6*/
   background: -o-radial-gradient(top right,#e1b876,#eeeeee); /*Opera 11.1-12*/
@@ -65,12 +66,15 @@ label {
   background: -o-radial-gradient(center,#333,#111); /*Opera 11.1-12*/
   background: -moz-radial-gradient(center,#333,#111); /*Fx 3.6-15*/
   background: radial-gradient(ellipse at center, #333, #111); /*Standard*/
-  height: 70px;
+  height: 150px;
   padding: 3px;
+  text-align: center;
 }
 
 .hand > img {
-  padding: 0 3px;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .buttons {
@@ -99,6 +103,11 @@ label {
   display:none !important;
 }
 
+.buttons p {
+  position: absolute;
+  left: 75px;
+}
+
 .blurry {
   z-index: 10;
   /*background-color: #555;*/
@@ -114,4 +123,13 @@ label {
 
 #replay {
   z-index: 100;
+}
+
+footer {
+  text-align: center;
+}
+
+footer a {
+  color: black;
+  font-size: 1em;
 }
